[project]
name = "image-and-video-processing"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "scipy>=1.17.1",
    "scipy-stubs~=1.17.1",
]
